@@ -1,5 +1,9 @@
 2012-08-18  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* Makefile.am, music/event_routing_map.hh, event_routing_map.cc,
+	music/connector.hh, music/port.hh: Renamed
+	event_routingmap.{cc,hh} -> event_routing_map.{cc,hh}.
+
 	* music/interval_tree.hh: Optimized memory usage.
 
 2012-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>
